INTEGRATION: Integration of 12197,12216,12219,12223,12227,12228,12229,12230,12231,12239,12240,12241,12251,12256,12274 from parent to child (branch spec: dev_to_lu_dev).    ==> 12197, Date:	2009/01/04 23:19:28        User:	jvs        Description:        	LUCIDDB:  inherit Farrago customBuild.properties
   ==> 12216, Date:	2009/01/08 17:33:05
       User:	jvs
       Description:
       	FARRAGO:  add foreign data wrapper for MQL; improve
       	error message when lodaing a foreign data wrapper with
       	an incorrect manifest; hide serverMofId in SQL/MED UDX
       	plans to allow them to be used in diff-based tests

   ==> 12219, Date:	2009/01/08 22:09:50
       User:	jvs
       Description:
       	FARRAGO:  oops, add missing disconnect.sql file

   ==> 12223, Date:	2009/01/13 01:57:08
       User:	jvs
       Description:
       	FARRAGO:  wrap FarragoDbSessionIndexMap.closeAllocation
       	in a repository session to fix one Hibernate problem,
       	and wrap the DDL recovery call in a write transaction to
       	fix another

   ==> 12227, Date:	2009/01/14 10:16:52
       User:	jvs
       Description:
       	FENNEL:  add Unicode support at tuple level

   ==> 12228, Date:	2009/01/14 12:47:32
       User:	jvs
       Description:
       	BF/FENNEL:  fix 64-bit build for Unicode change

   ==> 12229, Date:	2009/01/14 16:10:07
       User:	stephan
       Description:
       	FARRAGO: fix issues around DdlAlterTableStructure and Enki/Hibernate

   ==> 12230, Date:	2009/01/14 17:23:33
       User:	jvs
       Description:
       	BF/FENNEL:  TupleTest, now with even more portability!

   ==> 12231, Date:	2009/01/14 21:47:04
       User:	jvs
       Description:
       	FARRAGO:  port Fennel Unicode tuple changes to corresponding
       	Java code in net.sf.farrago.fennel.tuple

   ==> 12239, Date:	2009/01/19 11:08:22
       User:	jvs
       Description:
       	FENNEL:  fix a bogus uninitialized data member warning
       	in release mode with -O3 and bleeding-edge 